--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.8.16",
-        "updated": "2026-02-01 11:23:32"
+        "version": "1.8.17",
+        "updated": "2026-02-01 15:31:29"
     },
     "txwelcome": "欢迎",
     "quotes": [
@@ -173,7 +173,7 @@
     "txanleitung2": "[DF]{txgordonssunclock} 本质上是一款单指针时钟，其表盘每天变化，遵循自然与天体的节律。它显示太阳位置和星空。这是一种新的时间呈现方式，不像传统时钟（铁路时间和夏令时）那样人为，而是与季节变化保持一致。[~LF][~LF][i]提示：您可以在本说明与表盘之间左右滑动。[/i][~LF][~LF][~LF][b]–– 您的视角：[/b][~LF][~LF]在屏幕中央可以看到一条水平线，这就是地平线（地球表面）。中央的尖三角代表远处的一棵云杉（或一座教堂）。您不是从上方俯视，而是站在它前方。[~LF][~LF]如果未更改设置（“视角方向：自动”），在北半球通常面向南方（南半球则面向北方）。屏幕左侧为东方，右侧为西方（南半球相反）。地平线边缘标示着方位。[~LF][~LF]地平线下方较亮的区域表示民用暮光。大片深灰色区域象征夜晚（包括航海暮光）。位于该区域的天体不可见。[~LF][~LF]右上角显示本地时间（可选）、太阳高度（单位：度，例如 27.6°），以及您的位置字符代码（如“cri-hs”）或您输入的地名。下方显示不等长的时辰时间。",
     "txanleitung2b": "[DF][DF][b]–– 太阳：[/b][~LF][~LF]太阳（在时钟唯一指针的末端）在一天中从左向右移动（南半球相反）。太阳在屏幕上越靠左，就越偏东；越靠右，就越偏西（南半球相反）。太阳在屏幕上显示得越高，就表示它在天空中的高度越高。[~LF][~LF]太阳沿着绘制的圆形轨迹运行，表示它在一天内的运动路径。圆轨迹的边缘标有小时（例如 „12“），因此这条圆轨迹也充当表盘。[~LF][~LF]例如，您可以在表盘上看到：在夏令时切换期间数字如何移动，而圆轨迹本身保持不变。或者：在大多数地点，法定时间如何偏离当地时间，因为 12 点并不正好位于表盘顶部。时辰（temporal hours）则不同：在第 12 时（12ἡ）总是日落。[~LF][~LF][~LF][b]–– 月亮：[/b][~LF][~LF]月亮也有一条圆形轨迹，以浅灰色绘制。由于月亮完成一圈需要超过 24 小时，因此会用更浅的灰色额外附加前一天的 1.5 小时。若您“与这只钟一起生活”，就能清楚看到月亮在 27 天内如何越升越高、又逐渐降低。此外，您还能观察到：在满月时，它在圆圈上与太阳处于相对位置（远离太阳）；而在新月时，它处于同一圆圈位置（靠近太阳）。通常并非完全相同的位置，因为视角是侧向的（不是从上往下）。只有在日食时才会完全重合。[~LF][~LF]满月与新月会用阴影标记。新月会显示 35 小时（因为这段时间月亮无论如何都看不见）。满月会显示 24 小时。太阳与月亮轨迹的重新计算每天在 UTC 00:00 进行。",
     "txanleitung2c": "[DF][DF][b]–– 行星：[/b][~LF][~LF]会显示五颗肉眼可见的行星，并配有照片（就像用双筒望远镜看到的那样），或者（取决于设计）以它们的天文符号表示（见上一页）。当您观察真实的夜空时，可以通过“行星不会闪烁，而是稳定发光”来区分行星与恒星。行星在天空中看起来比遥远的恒星明显更大，因此受大气密度波动的影响也更小。[~LF][~LF][~LF][b]–– 恒星：[/b][~LF][~LF]另外还会显示十颗最亮的恒星，用“方框中的字母”表示（图例见上一页）。行星相对更有规律，通常或多或少位于太阳轨迹附近；而恒星的轨迹与太阳无关——它们本身就是自己的太阳。恒星符号中，方框的两条边会比另外两条画得更粗，这表示它们当前所在轨迹的角落或象限。如果突出显示的角在右下方，恒星（或多或少）位于其轨迹“末端”的右下方向。随后它的运动将主要朝左上方移动（也常常会移出屏幕）。如果上边更粗，恒星在您面前；如果下边更粗，则在您身后（前提是您没有更改旋转方向）。",
-    "txanleitung2d": "[DF][DF][b]–– 天气：[/b][~LF][~LF]左下角可显示本地天气预报：显示当前温度以及当天的降水量和日照时数。当天的主要特征还通过符号表示：晴朗、多阳光、干燥、不确定、下雨、大雨、下雪、无风、有风、风暴。– 雨的符号表示当天确实以降雨为主（6[NDASH]18 时），而非零星小雨。没有符号表示表示当天没有明显的天气特征。[~LF][~LF][~LF][b]–– 历史：[/b][~LF][~LF]{txgordonssunclock} 是二十多年时间研究的成果。最初是一款机械有机时钟，采用 24 小时表盘，并按月份显示日出与日落时间。由此发展出太阳时钟的概念，先是可行性研究和 ePaper 挂钟，随后加入了天气显示和 GPS。对位置灵活版本的设想最终形成了这款 Android 应用。[~LF][~LF]本项目的目标，是一种以太阳运行和自然昼夜、年度周期为导向的时间呈现方式——让人重新连接自然，以及我们自身的内在、昼夜节律时间。祝您使用愉快！[DF][DF][DF]",
+    "txanleitung2d": "[DF][DF][b]–– 天气：[/b][~LF][~LF]左下角可显示本地天气预报：显示当前温度以及当天的降水量和日照时数。当天的主要特征还通过符号表示：晴朗、多阳光、干燥、不确定、下雨、大雨、下雪、无风、有风、风暴。– 雨的符号表示当天确实以降雨为主（6[NDASH]18 时），而非零星小雨。没有符号表示表示当天没有明显的天气特征。[~LF][~LF][~LF][b]–– 历史：[/b][~LF][~LF]{txgordonssunclock} 是二十多年时间研究的成果。最初是一款机械有机时钟，采用 24 小时表盘，并按月份显示日出与日落时间。由此发展出{txsunclock-}的概念，先是可行性研究和 ePaper 挂钟，随后加入了天气显示和 GPS。对位置灵活版本的设想最终形成了这款 Android 应用。[~LF][~LF]本项目的目标，是一种以太阳运行和自然昼夜、年度周期为导向的时间呈现方式——让人重新连接自然，以及我们自身的内在、昼夜节律时间。祝您使用愉快！[DF][DF][DF]",
     "txabout": "[DF]信息",
     "txanleitungprg": "[DF]Gordon-太阳时钟[~LF]版本 [VERSIONNUM][~LF]Gordon Axmann[~LF]版权 2019-[VERSIONYEAR]",
     "txanleitung3": "[DF]本软件是一个免费的私人项目。它经过多年的开发和维护。[DF][DF]",
